@@ -218,6 +218,7 @@ wesm: Wes Malone <wes@mitsi.com>
 willert: Sebastian Willert <willert@cpan.org>
 wintermute: Toby Corkindale <tjc@cpan.org>
 wreis: Wallace Reis <wreis@cpan.org>
+x86-64 <x86mail@gmail.com>
 xenoterracide: Caleb Cushing <xenoterracide@gmail.com>
 xmikew: Mike Wisener <xmikew@32ths.com>
 yrlnry: Mark Jason Dominus <mjd@plover.com>
